# excelbase_cloud

./: .dockerignore  .gitignore  Dockerfile  README.md  V8_IMPLEMENTATION.md  V8_VALIDATION.md  app.py  db.py  excelbase_core.py  gate_visa_reader.py  operation_helpers.py  passenger_schema.py  persistence.py  photo_store.py  render.yaml  requirements.txt
.github/workflows/: ios.yml  v7-ci.yml  v8-ci.yml
.streamlit/: config.toml  secrets.toml.example
backend/: auth.py  bootstrap_admin.py  config.py  mail_ingest.py  main.py  models.py  requirements.txt  security.py  services.py  state.py  worker.py
backend/assistant/: __init__.py  body_limit.py  (+4 more)
docs/: IOS_OFFLINE_ARCHITECTURE.md  IOS_PARITY_MATRIX.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
ios/: .gitignore  project.yml
native/excelbase-core/: Cargo.toml  README.md
native/excelbase-core/src/: archive.rs  export.rs  import.rs  lib.rs  model.rs
native/excelbase-core/tests/: core_roundtrip.rs
static/: manifest.json
tests/: conftest.py  test_api_key_security.py  test_assistant.py  test_assistant_security.py  test_auth_fast_path.py  test_core.py  test_import_db_queue.py  test_passenger_page.py  test_process_roles.py  test_v71.py
v8/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
v8/alembic/: env.py
v8/alembic/versions/: 2f10f322cd83_serialize_audit_hash_chains.py  4b7d9e21a3c5_add_audit_checkpoints.py  96992c73e856_add_import_staging_and_object_metadata.py  ec8e1c988c23_v8_relational_foundation.py
v8/app/: __init__.py  audit.py  auth.py  config.py  database.py  exports.py  import_adapter.py  logging_setup.py  main.py  migration.py  models.py  ratelimit.py  repositories.py  schemas.py  security.py  services.py  storage.py
v8/scripts/: auto_bootstrap.py  bootstrap.py  generate_keys.py  issue_token.py  migrate_v7_backup.py
v8/tests/: conftest.py  test_api.py  test_units.py
(+107 files in other folders)
