[package]
name = "excelbase-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Proprietary"
description = "Offline, path-based import/export engine for Excelbase iOS"

[lib]
name = "excelbase_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen"]

[features]
default = []
bindgen = ["uniffi/cli"]

[dependencies]
calamine = { version = "=0.36.0", features = ["dates"] }
csv = "=1.4.0"
encoding_rs = "=0.8.35"
rust_xlsxwriter = { version = "=0.96.0", default-features = false, features = ["constant_memory"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
thiserror = "=2.0.17"
uniffi = "=0.32.0"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "=3.24.0"
